@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-11T16:19:37Z",
+  "timestamp" : "2024-01-12T08:18:59Z",
   "count_outdated" : 1010,
   "uniques_outdated" : 588,
-  "count" : 1021,
-  "uniques" : 595,
+  "count" : 1022,
+  "uniques" : 596,
   "clones" : [
     {
       "timestamp": "2023-12-30T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
